--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Project</h1>
+<h1>Editing User</h1>
 
-<%= render 'form', project: @project %>
+<%= render 'form', user: @usre %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Show', @user %> |
+<%= link_to 'Back', "/" %>
