Position search-booking-col div in the middle of row

--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -72,3 +72,9 @@ input:-webkit-autofill {
   width: 100% !important;
   margin-left: auto !important;
 }
+
+#search-booking-col {
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
+}
