--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,26 +12,30 @@
 }
 
 /* label underline focus color */
-.input-field input[type=text]:focus {
+.input-field input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
   border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000;
+  box-shadow: none !important;
 }
 
 /* valid color */
-.input-field input[type=text].valid {
+.input-field input[type=text].valid, input[type=email]:valid, input[type=password]:valid {
   border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000;
+  box-shadow: none !important;
 }
 
 /* invalid color */
 .input-field input[type=text].invalid {
-  border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000;
+  border-bottom: 1px solid #ee6e73;
+  box-shadow: none !important;
+}
+
+input[type=email]:valid, input[type=password]:valid {
+  box-shadow: none !important;
 }
 
 /* icon prefix focus color */
 .input-field .prefix.active {
-  color: #2196f3 !important;
+  color: #000 !important;
 }
 
 #login-page, #signup-page {
@@ -49,7 +53,6 @@
   width: 40%;
   float: none !important;
 }
-
 
 .current-user {
   padding: 90px;
