Remove faulty waves-effect and waves-light classes

--- a/app/views/bookings/_confirm_form.html.erb
+++ b/app/views/bookings/_confirm_form.html.erb
@@ -36,6 +36,6 @@
   <% end %>
 </div>
 <div class="actions">
-  <%= f.submit "CONFIRM", class: "btn waves-effect waves-light blue create-booking"%>
+  <%= f.submit "CONFIRM", class: "btn blue create-booking"%>
 </div>
 <% end %>
