--- a/app/views/bookings/_past_bookings.html.erb
+++ b/app/views/bookings/_past_bookings.html.erb
@@ -41,7 +41,7 @@
             </ul>
           </td>
           <td>
-            <%= link_to booking, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn-floating btn-large waves-effect waves-light blue" do %>
+            <%= link_to booking, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn-floating btn-large blue" do %>
               <i class="material-icons">delete</i>
             <% end %>
           </td>
@@ -50,6 +50,6 @@
       </tbody>
     </table>
     <% end %>
-    <%=link_to "BACK", "/", :class=>"btn waves-effect waves-light blue back"%>
+    <%=link_to "BACK", "/", :class=>"btn blue back"%>
   </div>
 </div>
