--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -40,10 +40,10 @@
   <%= render 'passenger_fields', :f => passenger %>
   <% end %>
   <div class='links'>
-    <%= link_to_add_association 'add passenger', f, :passengers, class: "btn waves-effect waves-light blue" %>
+    <%= link_to_add_association 'add passenger', f, :passengers, class: "btn blue" %>
   </div>
 </div>
 <div class="actions">
-  <%= f.submit "CREATE BOOKING", class: "btn waves-effect waves-light blue create-booking" %>
+  <%= f.submit "CREATE BOOKING", class: "btn blue create-booking" %>
 </div>
 <% end %>
