--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -12,6 +12,10 @@
   border: none;
   outline: none;
   box-shadow: none;
+  background-color: #fff;
+  width: 85%;
+  margin-top: 1%;
+  margin-right: 2%;
 }
 
 input:-webkit-autofill {
