--- a/app/views/bookings/_search_results.html.erb
+++ b/app/views/bookings/_search_results.html.erb
@@ -38,6 +38,6 @@
         </div>
       </tbody>
     </table>
-    <%=link_to "BACK", "/", :class=>"btn waves-effect waves-light blue back"%>
+    <%=link_to "BACK", "/", :class=>"btn blue back"%>
   </div>
 </div>
