Add top padding for the row div
Specify padding to position the form below the nav bar

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,4 @@
-<div class="row" id="new-reservation" style="
-    padding-top: 7%;
-">
+<div class="row" id="new-reservation">
   <div class="col s10 offset-s1 card-panel" id="option-fields">
     <%= render 'form_edit', booking: @booking %>
     <%= link_to 'Back', "/", class: "btn blue back" %>
