--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,17 +1,6 @@
 <div class="row" id="new-reservation">
   <div class="col s10 offset-s1 card-panel" id="option-fields">
-    <p id="notice"><%= notice %></p>
-
-    <p>
-      <strong>Flight id:</strong>
-      <%= @booking.flight_id %>
-    </p>
-
-    <p>
-      <strong>Booking code:</strong>
-      <%= @booking.booking_code %>
-    </p>
-
-    <%= link_to 'HOME', root_path, class: "btn waves-effect waves-light blue back" %>
+    <%= render 'form_show', booking: @booking %>
+    <%= link_to 'Back', "/", class: "btn blue back" %>
   </div>
 </div>
