--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row" id="preferences">
-  <div class="col s10 offset-s2" id="option-fields">
+  <div class="col s10" id="option-fields">
     <%= render "form", airports: @airports %>
   </div>
 </div>
 <div class="row" id="results">
-  <div class="col s10 offset-s2" id="available-container"></div>
+  <div class="col s10" id="available-container"></div>
 </div>
