--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -2,7 +2,7 @@
 <% if booking.errors.any? %>
 <div id="error_explanation">
   <h2><%= pluralize(booking.errors.count, "error") %>
-    prohibited this project from being saved:</h2>
+    prohibited this booking from being saved:</h2>
 
   <ul>
     <% booking.errors.full_messages.each do |message| %>
@@ -11,9 +11,6 @@
   </ul>
 </div>
 <% end %>
-<div class="field">
-  <%= f.hidden_field :user_id %>
-</div>
 <div class="field">
   <%= f.label :flight_id %>
   <br/>
