--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row" id="new-reservation">
-  <div class="col s10 offset-s1 card-panel" id="option-fields">
+  <div class="col s10 offset-s1 card-panel">
     <%= render 'form', booking: @booking %>
     <%= link_to 'Back', "/", class: "btn blue back" %>
   </div>
