--- a/app/views/flights/_available_flights.html.erb
+++ b/app/views/flights/_available_flights.html.erb
@@ -9,7 +9,7 @@
 <% else %>
 <form action="<%= new_booking_path %>" method="get">
   <div class="row">
-    <div class="col s12" id="available-content">
+    <div class="col s12 l12" id="available-content">
       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
       <input type="hidden" name="passengers_qty" value="<%= passengers_qty %>">
       <table class="striped responsive-table centered">
@@ -26,12 +26,12 @@
           <div class="row">
             <% @flights.each do |flight| %>
             <tr>
-              <td><%= flight.airline_name %></td>
+              <td><%= flight.airline.airline_name %></td>
               <td><%= flight.departure_date %></td>
               <td><%= flight.arrival_date %></td>
               <td>$<%= flight.cost %></td>
               <td>
-                <input name="flight_group" type="radio" value="<%= flight.id %>" class="validate" required/>
+                <input name="flight_group" type="radio" value="<%= flight.id %>" class="validate flight_option" required/>
               </td>
             </tr>
             <% end %>
@@ -42,7 +42,7 @@
   </div>
   <div class="row">
     <div class="col s8 offset-s4">
-      <button class="btn blue" type="submit" name="action" id="select-flight">Select flight
+      <button class="btn blue" type="submit" name="action" id="submit_option">Select flight
         <i class="material-icons right">send</i>
       </button>
     </div>
