--- a/app/views/users/_signup.html.erb
+++ b/app/views/users/_signup.html.erb
@@ -3,7 +3,7 @@
     <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %>
-        prohibited this project from being saved:</h2>
+        prohibited this booking from being saved:</h2>
 
       <ul>
         <% user.errors.full_messages.each do |message| %>
@@ -23,17 +23,17 @@
     <% end %>
     <%= f.hidden_field :role_id %>
     <div class="row">
-      <div class="input-field col s4">
+      <div class="input-field col s12 l4">
         <i class="material-icons prefix">assignment_ind</i>
         <%= f.text_field :first_name, class: "validate", placeholder:"First Name", required: true  %>
       </div>
 
-      <div class="input-field col s4">
+      <div class="input-field col s12 l4">
         <i class="material-icons prefix">assignment_ind</i>
         <%= f.text_field :middle_name, class: "validate", placeholder:"Middle Name", required: true  %>
       </div>
 
-      <div class="input-field col s4">
+      <div class="input-field col s12 l4">
         <i class="material-icons prefix">assignment_ind</i>
         <%= f.text_field :last_name, class: "validate", placeholder:"Last Name", required: true  %>
       </div>
@@ -55,7 +55,7 @@
 
     <div class="row">
       <div class="col s12">
-        <%= f.submit 'Create account', class: 'submit btn waves-effect blue' do %>
+        <%= f.submit 'Create account', class: 'submit btn blue' do %>
           <i class="material-icons right">send</i>
         <% end %>
       </div>
