Remove faulty matrialize waves classes

--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <%= button_tag(type: "submit", class: "submit btn waves-effect waves-light blue col s12", disable_with: "Authenticating...") do %>
+          <%= button_tag(type: "submit", class: "submit btn blue col s12", disable_with: "Authenticating...", id: "submit") do %>
            Login
           <% end %>
         </div>
