--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <%= button_tag(type: "submit", class: "submit btn waves-effect waves-light blue col s12", disable_with: "Resetting...") do %>
+          <%= button_tag(type: "submit", class: "submit btn blue col s12", disable_with: "Resetting...") do %>
            Reset
           <% end %>
         </div>
