--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,6 +17,6 @@
       <strong>Email:</strong>
       <%= @user.email %>
     </p>
-    <%= link_to 'Back', root_path , class: "btn-large waves-effect waves-light blue back"%>
+    <%= link_to 'Back', root_path , class: "btn-large blue back"%>
   </div>
 </div>
