--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row" id="new-reservation">
-  <div class="col s10 offset-s1 card-panel">
+  <div class="col s10 offset-s1 l8 offset-l2 card-panel">
     <%= render 'form_show', booking: @booking %>
     <%= link_to 'Home', "/", class: "btn blue back", data: {turbolinks: false} %>
     <%= link_to 'Back', "/", class: "btn blue back", data: {turbolinks: false} %>
