--- a/app/views/bookings/_form_edit.html.erb
+++ b/app/views/bookings/_form_edit.html.erb
@@ -11,39 +11,80 @@
   </ul>
 </div>
 <% end %>
-<div class="field">
-  <%= f.hidden_field :user_id %>
-</div>
-<div class="field">
-  <%= f.label :flight_id %>
-  <br/>
-  <%= f.text_field :flight_id, readonly: true %>
-</div>
-<div class="field">
-  <%= f.label :booking_code %>
-  <br/>
-  <%= f.text_field :booking_code, readonly: true %>
-</div>
+<div class="row">
+  <div class="col s12 l5">
+    <div class="field">
+      <%= f.hidden_field :flight_id %>
+    </div>
+    <%= fields_for :flight, booking.flight do |flight| %>
+      <div class="field">
+        <%= flight.label :flight_code %>
+        <br/>
+        <%= flight.text_field :flight_code, readonly: true %>
+      </div>
+      <div class="field">
+        <%= flight.label :source_airport %>
+        <br/>
+        <%= flight.text_field :source_airport, readonly: true %>
+      </div>
+      <div class="field">
+        <%= flight.label :destination_airport %>
+        <br/>
+        <%= flight.text_field :destination_airport, readonly: true %>
+      </div>
+      <div class="field">
+        <%= flight.label :departure_date %>
+        <br/>
+        <%= flight.text_field :departure_date, readonly: true %>
+      </div>
+      <div class="field">
+        <%= flight.label :arrival_date %>
+        <br/>
+        <%= flight.text_field :arrival_date, readonly: true %>
+      </div>
+      <div class="field">
+        <%= flight.hidden_field :cost %>
+      </div>
+    <% end %>
 
-<div class="field">
-  <%= f.label :email %>
-  <br/>
-  <% if current_user %>
-  <%= f.email_field :email, readonly: true %>
-  <% else %>
-  <%= f.email_field :email, class: "validate", required: true %>
-  <% end %>
-</div>
-<h6 class="align">Passengers</h6>
-<div id='passengers'>
-  <%= f.fields_for :passengers do |passenger| %>
-  <%= render 'passenger_fields', :f => passenger %>
-  <% end %>
-  <div class='links'>
-    <%= link_to_add_association 'add passenger', f, :passengers, class: "btn blue" %>
+    <div class="field">
+      <%= f.label :cost %>
+      <br/>
+      <%= f.text_field :cost, readonly: true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :email %>
+      <br/>
+      <% if current_user %>
+      <%= f.email_field :email, readonly: true %>
+      <% else %>
+      <%= f.email_field :email, class: "validate", required: true %>
+      <% end %>
+    </div>
+  </div>
+  <div class="col s12 l7">
+    <h6 class="align">Passengers</h6>
+    <div class="field">
+      <%= hidden_field_tag "passenger_count", passenger_count %>
+    </div>
+    <div id='passengers'>
+      <%= f.fields_for :passengers do |passenger| %>
+      <%= render 'passenger_fields', :f => passenger %>
+      <% end %>
+      <div class='links add-passenger'>
+        <%= link_to_add_association f, :passengers, class: "btn-floating btn-large btn blue", id: "add-passenger" do %>
+          <i class="material-icons">add</i>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
-<div class="actions">
-  <%= f.submit "UPDATE BOOKING", class: "btn blue create-booking" %>
+<div class="row">
+  <div class="col s12 l12">
+    <div class="actions">
+      <%= f.submit "UPDATE BOOKING", class: "col s12 l12 btn blue create-booking" %>
+    </div>
+  </div>
 </div>
 <% end %>
