--- a/app/views/bookings/_form_show.html.erb
+++ b/app/views/bookings/_form_show.html.erb
@@ -1,29 +1,78 @@
 <%= form_for booking, :url => { :action => "create" } do |f| %>
 <% if booking.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(booking.errors.count, "error") %>
-    prohibited this booking from being saved:</h2>
+<div class="row margin flash-message">
+  <div class="col s8 offset-s2 l6 offset-l3">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <div id="error_explanation">
+          <h5><%= pluralize(booking.errors.count, "error") %>
+            prohibited this booking from being saved:</h5>
 
-  <ul>
-    <% booking.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
+          <ul>
+            <% booking.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <% end %>
-<div class="field">
-  <%= f.hidden_field :user_id %>
+<% if notice %>
+<div class="row margin flash-message">
+  <div class="col s8 offset-s2 l6 offset-l3">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <ul>
+          <li><%= notice %></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="field">
-  <%= f.label :flight_id %>
-  <br/>
-  <%= f.text_field :flight_id, readonly: true %>
-</div>
+<% end %>
 <div class="field">
   <%= f.label :booking_code %>
   <br/>
   <%= f.text_field :booking_code, readonly: true %>
 </div>
+
+<%= fields_for :flight, booking.flight do |flight| %>
+  <div class="row">
+    <div class="col s10 offset-s1 l6">
+      <div class="field">
+        <%= flight.label :source_airport %>
+        <br/>
+        <%= flight.text_field :source_airport, readonly: true %>
+      </div>
+    </div>
+    <div class="col s10 offset-s1 l6">
+      <div class="field">
+        <%= flight.label :destination_airport %>
+        <br/>
+        <%= flight.text_field :destination_airport, readonly: true %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s10 offset-s1 l6">
+      <div class="field">
+        <%= flight.label :departure_date %>
+        <br/>
+        <%= flight.text_field :departure_date, readonly: true %>
+      </div>
+    </div>
+    <div class="col s10 offset-s1 l6">
+      <div class="field">
+        <%= flight.label :arrival_date %>
+        <br/>
+        <%= flight.text_field :arrival_date, readonly: true %>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <div class="field">
   <%= f.label :email %>
   <br/>
