--- a/app/views/bookings/_passenger_fields.html.erb
+++ b/app/views/bookings/_passenger_fields.html.erb
@@ -7,5 +7,5 @@
     <%= f.label :passport_number %>
     <%= f.text_field :passport_number, class: "validate", required: true %>
   </div>
-  <%= link_to_remove_association "remove passenger", f, class: "btn blue remove" %>
+  <%= link_to_remove_association "remove passenger", f, class: "col s12 l6 offset-l3 btn blue remove" %>
 </div>
