--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,11 +1,15 @@
 <div class="row past" id="available-parent">
   <div class="col s10 offset-s1 past-child">
     <% if flash[:notice] %>
-    <div class="row margin">
-      <div class="input-field col s12">
-        <p>
-          <%= flash[:notice] %>
-        </p>
+    <div class="row margin flash-message">
+      <div class="col s8 offset-s2 l6 offset-l3">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <ul>
+              <li><%= flash[:notice] %></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <% else %>
@@ -42,7 +46,7 @@
           </td>
           <% if current_user %>
           <td>
-            <%= link_to @booking, method: :delete, data: { confirm: 'Are you sure you want to cancel this flight?' }, class: "btn-floating btn-large blue" do %>
+            <%= link_to booking, method: :delete, data: { confirm: 'Are you sure you want to cancel this flight?' }, class: "btn-floating btn-large blue" do %>
               <i class="material-icons">delete</i>
             <% end %>
           </td>
@@ -52,6 +56,6 @@
       </tbody>
     </table>
     <% end %>
-    <%=link_to "BACK", "/", :class=>"btn blue back"%>
+    <%=link_to "BACK", "/", :class=>"btn blue back", data: {turbolinks: false} %>
   </div>
 </div>
