--- a/app/views/flights/_available_flights.html.erb
+++ b/app/views/flights/_available_flights.html.erb
@@ -1,9 +1,13 @@
 <% if flash[:notice] %>
-<div class="row margin">
-  <div class="input-field col s12">
-    <p>
-      <%= flash[:notice] %>
-    </p>
+<div class="row margin flash-message">
+  <div class="col s8 offset-s2 l6 offset-l3">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <ul>
+          <li><%= flash[:notice] %></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 <% else %>
