--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,11 +1,15 @@
 <div class="row" id="login-page">
   <div class="col s12 z-depth-6 card-panel" id="login-details">
     <% if flash[:notice] %>
-    <div class="row margin">
-      <div class="input-field col s12">
-        <p>
-          <%= flash[:notice] %>
-        </p>
+    <div class="row margin flash-message">
+      <div class="col s8 offset-s2 l6 offset-l3">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <ul>
+              <li><%= flash[:notice] %></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <% end %>
