--- a/app/views/app_mailer/message_send.text.erb
+++ b/app/views/app_mailer/message_send.text.erb
@@ -5,7 +5,7 @@ You have successfully booked a flight on flightset.com,
 your booking details are as follows:
 <%= @booking.booking_code %>.<br>
 
-<%= @booking.passengers.each do |passenger| %>
+<% @booking.passengers.each do |passenger| %>
   <%= passenger.passenger_name %>
   <%= passenger.passport_number %>
 <% end %>
