Rectify tests for nested attributes

--- a/app/views/flights/_available_flights.html.erb
+++ b/app/views/flights/_available_flights.html.erb
@@ -45,7 +45,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col s8 offset-s4">
+    <div class="col s12 l6 offset-l3">
       <button class="btn blue" type="submit" name="action" id="submit_option">Select flight
         <i class="material-icons right">send</i>
       </button>
