--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_tag(search_flights_path, remote: true, method: "get", id: "form-preferences") do %>
   <%= select_tag "origin", options_from_collection_for_select(airports, "id", "airport_name"), class: "col s12 l2 validate", prompt: "Origin", id: "origin", required: true %>
   <%= select_tag "destination", options_from_collection_for_select(airports, "id", "airport_name"), class: "col s12 l3 validate", prompt: "Destination", id: "destination", required: true %>
-  <%= select_tag "passenger", options_for_select([['1', 1], ['2', 2], ['3', 3], ['4', 4], ['5', 5], ['6', 6], ['7', 7], ['8', 8], ['9', 9]]), class: "col s12 l3 validate resize", prompt: "No. of passengers", id: "passenger", required: true %>
-  <%= text_field_tag "flight_date", nil, class: "datepicker col s12 l2 validate resize", placeholder: "Date", id: "flight_date", required: true %>
+  <%= select_tag "passenger", options_for_select([['1', 1], ['2', 2], ['3', 3], ['4', 4], ['5', 5], ['6', 6], ['7', 7], ['8', 8], ['9', 9]]), class: "col s12 l3 validate", prompt: "No. of passengers", id: "passenger", required: true %>
+  <%= text_field_tag "flight_date", nil, class: "datepicker col s12 l2 validate", placeholder: "Date", id: "flight_date", required: true %>
   <%= button_tag(type: "submit", class: "btn-floating btn-large waves-effect waves-light blue", disable_with: "Searching...", id: "submit") do %>
    <i class="material-icons">search</i>
   <% end %>
