--- a/app/views/flights/_available_flights.html.erb
+++ b/app/views/flights/_available_flights.html.erb
@@ -35,7 +35,7 @@
               <td><%= flight.arrival_date %></td>
               <td>$<%= flight.cost %></td>
               <td>
-                <input name="flight_group" type="radio" value="<%= flight.id %>" class="validate flight_option" required/>
+                <input name="flight_id" type="radio" value="<%= flight.id %>" class="validate flight_option" required/>
               </td>
             </tr>
             <% end %>
