--- a/app/views/bookings/_form_show.html.erb
+++ b/app/views/bookings/_form_show.html.erb
@@ -41,18 +41,23 @@
 <%= fields_for :flight, booking.flight do |flight| %>
   <div class="row">
     <div class="col s10 offset-s1 l6">
+      <%= fields_for :source_airport, booking.flight.source_airport do |source_airport_fields| %>
       <div class="field">
         <%= flight.label :source_airport %>
         <br/>
-        <%= flight.text_field :source_airport, readonly: true %>
+        <%= source_airport_fields.text_field :airport_name, readonly: true %>
       </div>
+      <% end %>
     </div>
+
     <div class="col s10 offset-s1 l6">
+      <%= fields_for :destination_airport, booking.flight.destination_airport do |destination_airport_fields| %>
       <div class="field">
         <%= flight.label :destination_airport %>
         <br/>
-        <%= flight.text_field :destination_airport, readonly: true %>
+        <%= destination_airport_fields.text_field :airport_name, readonly: true %>
       </div>
+      <% end %>
     </div>
   </div>
   <div class="row">
