--- a/app/views/users/_signup.html.erb
+++ b/app/views/users/_signup.html.erb
@@ -68,7 +68,7 @@
 <div class="row">
   <div class="col s12 login-path">
     <p>Already have an account?
-      <%= link_to 'Log in', login_path %>
+      <%= link_to 'Log in', new_session_path %>
     </p>
   </div>
 </div>
