--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,14 +41,14 @@
                 </a>
               </li>
               <li class="top-right">
-                <a href="/sessions/<%= (current_user.id) %>" class="top-right" id="logout-main-nav" data-method="delete" rel="nofollow">
+                <a href="<%= logout_path %>" class="top-right" id="logout-main-nav" data-method="delete" rel="nofollow">
                   <i class="material-icons menu-option top-right">lock_open</i>
                   Log Out
                 </a>
               </li>
             <% else %>
               <li class="top-right">
-                <a href="<%= new_session_path %>" class="top-right" id="signin-main-nav">
+                <a href="<%= login_path %>" class="top-right" id="signin-main-nav">
                   <i class="material-icons menu-option top-right">lock_open</i>
                   Sign In
                 </a>
@@ -79,7 +79,7 @@
                 <div class="divider"></div>
               </li>
               <li>
-                <a href="/sessions/<%= (current_user.id)%>" data-method="delete" rel="nofollow">
+                <a href="<%= logout_path %>" data-method="delete" rel="nofollow">
                   <i class="material-icons menu-option">lock_open</i>
                   Log Out
                 </a>
@@ -89,7 +89,7 @@
               </li>
             <% else %>
               <li>
-                <a href="<%= new_session_path %>">
+                <a href="<%= login_path %>">
                   <i class="material-icons menu-option">lock_open</i>
                   Sign In
                 </a>
